221115 Feat :: todo 추가

--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -30,5 +30,26 @@
         <action
             android:id="@+id/action_entryFragment3_to_signupFragment"
             app:destination="@id/signupFragment" />
+        <action
+            android:id="@+id/action_entryFragment3_to_mainpage_fragment"
+            app:destination="@id/mainpage_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/mainpage_fragment"
+        android:name="com.example.team_16.mainpage_fragment"
+        android:label="fragment_mainpage_fragment"
+        tools:layout="@layout/fragment_mainpage_fragment" >
+        <action
+            android:id="@+id/action_mainpage_fragment_to_calendar_fragment"
+            app:destination="@id/calendar_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/calendar_fragment"
+        android:name="com.example.team_16.calendar_fragment"
+        android:label="fragment_calendar_fragment"
+        tools:layout="@layout/fragment_calendar_fragment" >
+        <action
+            android:id="@+id/action_calendar_fragment_to_mainpage_fragment"
+            app:destination="@id/mainpage_fragment" />
     </fragment>
 </navigation>
