221116 Feat :: 한글 자판, 패스워드 재설정(이메일 링크)

--- a/app/src/main/res/layout/fragment_entry.xml
+++ b/app/src/main/res/layout/fragment_entry.xml
@@ -97,7 +97,7 @@
             android:layout_marginEnd="60dp"
             android:layout_marginBottom="6dp"
             android:backgroundTint="#000470"
-            android:text="ID / PW 찾기"
+            android:text="PW 재설정"
             app:iconTint="#003F51B5" />
     </LinearLayout>
 
