--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -33,6 +33,9 @@
         <action
             android:id="@+id/action_entryFragment3_to_mainpage_fragment"
             app:destination="@id/mainpage_fragment" />
+        <action
+            android:id="@+id/action_entryFragment3_to_findePWFragment"
+            app:destination="@id/findePWFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainpage_fragment"
@@ -51,5 +54,14 @@
         <action
             android:id="@+id/action_calendar_fragment_to_mainpage_fragment"
             app:destination="@id/mainpage_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/findePWFragment"
+        android:name="com.example.team_16.FindePWFragment"
+        android:label="fragment_finde_p_w"
+        tools:layout="@layout/fragment_newpw" >
+        <action
+            android:id="@+id/action_findePWFragment_to_entryFragment3"
+            app:destination="@id/entryFragment3" />
     </fragment>
 </navigation>
