221118 Feat :: Stopwatch 추가

--- a/app/src/main/res/layout/fragment_mainpage_fragment.xml
+++ b/app/src/main/res/layout/fragment_mainpage_fragment.xml
@@ -17,4 +17,15 @@
         android:src="@android:drawable/ic_menu_my_calendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/goto_stopwatch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_watch_later_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/goto_calendar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
