221122 Feat :: 프래그먼트간 값 전달, 네비게이션바 설정 변경

--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -3,14 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/signupFragment"
-        android:icon="@drawable/ic_baseline_assignment_ind"
-        android:title="회원가입" />
-    <item
+        android:id="@+id/MypageFragment"
         android:icon="@drawable/ic_baseline_manage_accounts_24"
         android:title="마이페이지" />
     <item
-        android:id="@+id/Stopwatch"
-        android:icon="@drawable/ic_baseline_watch_later_24"
-        android:title="StopWatch" />
+        android:id="@+id/stopwatchFragment_"
+        android:icon="@drawable/ic_baseline_timer_24"
+        android:title="스톱워치" />
+    <item
+        android:id="@+id/ranking"
+        android:icon="@drawable/ic_baseline_area_chart_24"
+        android:title="랭킹" />
+    <item
+        android:id="@+id/calendar_fragment"
+        android:icon="@drawable/ic_baseline_edit_calendar_24"
+        android:title="캘린더" />
 </menu>
