--- a/app/src/main/res/layout/fragment_calendar_fragment.xml
+++ b/app/src/main/res/layout/fragment_calendar_fragment.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout2"
+    android:id="@+id/calendar_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#002870"
+    android:background="#FFFFFF"
     android:foregroundTint="#FFFFFF"
     tools:context=".calendar_fragment">
 
@@ -17,8 +17,8 @@
         android:layout_marginBottom="8dp"
         android:alwaysDrawnWithCache="false"
         android:animationCache="false"
-        android:background="#002870"
-        android:backgroundTint="#5200328A"
+        android:background="#FFFFFF"
+        android:backgroundTint="#0200328A"
         android:focusableInTouchMode="false"
         android:focusedMonthDateColor="#FFF79D"
         android:foregroundGravity="center"
@@ -37,15 +37,15 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#002870"
         android:drawableTint="#FFFFFF"
         android:ems="10"
         android:foregroundTint="#FFFFFF"
         android:hint="할 일을 입력하세요."
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#86FFFEFE"
+        android:textColor="#002870"
+        android:textColorHint="#31002870"
         app:layout_constraintBottom_toTopOf="@+id/swipeRefreshLayout"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,17 +68,17 @@
             android:id="@+id/add_button"
             android:layout_width="70dp"
             android:layout_height="38dp"
-            android:backgroundTint="#FFF79D"
+            android:backgroundTint="#002870"
             android:text="추가"
-            android:textColor="#002870" />
+            android:textColor="#FFF79D" />
 
         <Button
             android:id="@+id/btn_re"
             android:layout_width="70dp"
             android:layout_height="38dp"
-            android:backgroundTint="#FFF79D"
+            android:backgroundTint="#002870"
             android:text="적용"
-            android:textColor="#002870"
+            android:textColor="#FFF79D"
             app:iconTint="#FFF79D" />
     </LinearLayout>
 
