--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="16dp"
         android:text="first"
         android:textAlignment="viewStart"
-        android:textColor="#FFFFFF"
+        android:textColor="#002870"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,10 +26,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="#FFF79D"
-        android:buttonTint="#FFF79D"
-        android:textColorHighlight="#FFF79D"
-        android:textColorLink="#FFF79D"
+        android:backgroundTint="#002870"
+        android:buttonTint="#002870"
+        android:textColorHighlight="#002870"
+        android:textColorLink="#002870"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
