221122 Style :: 네비게이션 바 설정 변경, 전체적인 테마 변경

--- a/app/src/main/res/layout/fragment_calendar_fragment.xml
+++ b/app/src/main/res/layout/fragment_calendar_fragment.xml
@@ -70,7 +70,8 @@
             android:layout_height="38dp"
             android:backgroundTint="#002870"
             android:text="추가"
-            android:textColor="#FFF79D" />
+            android:textColor="#FFF79D"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_re"
@@ -79,6 +80,7 @@
             android:backgroundTint="#002870"
             android:text="적용"
             android:textColor="#FFF79D"
+            android:textStyle="bold"
             app:iconTint="#FFF79D" />
     </LinearLayout>
 
