--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -5,17 +5,17 @@
     android:id="@+id/stopwatchFragment_"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#002870"
-    android:backgroundTint="#002870"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
     tools:context=".Stopwatch">
 
     <Button
         android:id="@+id/btn_start"
         android:layout_width="130dp"
         android:layout_height="80dp"
-        android:backgroundTint="#FFF79D"
+        android:backgroundTint="#002870"
         android:text="Start"
-        android:textColor="#002870"
+        android:textColor="#FFF79D"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btn_stop"
@@ -27,9 +27,9 @@
         android:id="@+id/btn_stop"
         android:layout_width="130dp"
         android:layout_height="80dp"
-        android:backgroundTint="#FFF79D"
+        android:backgroundTint="#002870"
         android:text="Stop"
-        android:textColor="#002870"
+        android:textColor="#FFF79D"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@id/btn_start"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:text="00:00:00.000"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#FFFFFF"
+        android:textColor="#002870"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         android:text="STOPWATCH"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#FFFFFF"
+        android:textColor="#002870"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         android:text="yesterday"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#9FA0A0"
+        android:textColor="#70002870"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
         android:text="00:00:00.00"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#9FA0A0"
+        android:textColor="#70002870"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
