--- a/app/src/main/res/layout/fragment_register_user_info.xml
+++ b/app/src/main/res/layout/fragment_register_user_info.xml
@@ -27,20 +27,20 @@
         android:id="@+id/txt_userinfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:text="회원 정보를 입력하세요."
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/et_email_mypage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
 
     <EditText
         android:id="@+id/et_kauID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_margin="30dp"
         android:ems="10"
         android:hint="학번을 입력하세요"
