--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -31,7 +31,7 @@
     <fragment
         android:id="@+id/entryFragment"
         android:name="com.example.team_16.EntryFragment"
-        android:label="메인 화면"
+        android:label="로그인"
         tools:layout="@layout/fragment_entry">
         <action
             android:id="@+id/action_entryFragment_to_signupFragment"
@@ -46,13 +46,13 @@
     <fragment
         android:id="@+id/calendar_fragment"
         android:name="com.example.team_16.calendar_fragment"
-        android:label="fragment_calendar_fragment"
+        android:label="투두리스트"
         tools:layout="@layout/fragment_calendar_fragment" />
     <fragment
         android:id="@+id/findePWFragment"
         android:name="com.example.team_16.FindePWFragment"
-        android:label="fragment_finde_p_w"
-        tools:layout="@layout/fragment_newpw" >
+        android:label="비밀번호찾기"
+        tools:layout="@layout/fragment_newpw">
         <action
             android:id="@+id/action_findePWFragment_to_entryFragment3"
             app:destination="@id/entryFragment" />
@@ -60,18 +60,10 @@
     <fragment
         android:id="@+id/stopwatchFragment_"
         android:name="com.example.team_16.Stopwatch"
-        android:label="fragment_stopwatch"
-        tools:layout="@layout/fragment_stopwatch" >
+        android:label="스톱워치"
+        tools:layout="@layout/fragment_stopwatch">
         <action
             android:id="@+id/action_stopwatchFragment__to_calendar_fragment"
             app:destination="@id/calendar_fragment" />
-        <action
-            android:id="@+id/action_stopwatchFragment__to_mypageFragment"
-            app:destination="@id/mypageFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/mypageFragment"
-        android:name="com.example.team_16.MypageFragment"
-        android:label="fragment_mypage"
-        tools:layout="@layout/fragment_mypage" />
 </navigation>
