--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/MypageFragment"
+        android:id="@+id/user_info"
         android:icon="@drawable/ic_baseline_manage_accounts_24"
         android:title="마이페이지" />
     <item
@@ -15,7 +15,7 @@
         android:icon="@drawable/ic_baseline_area_chart_24"
         android:title="랭킹" />
     <item
-        android:id="@+id/calendar_fragment"
+        android:id="@+id/todo"
         android:icon="@drawable/ic_baseline_edit_calendar_24"
         android:title="캘린더" />
 </menu>
